<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BT Tag Writer 2</string>
    <string name="bt_devices_caption_str">Select device</string>
    <string name="btle_devices_caption_str">Select LE device</string>
    <string name="start_button_str">Start wizard</string>
    <string name="about_button_str">Application details</string>
    <string name="about_info_str">This software is provided &quot;as is&quot; and without any
        express or implied warranties, including, without limitation, the implied warranties of
        merchantability and fitness for a particular purpose.&lt;br/&gt;&lt;br/&gt;Please report
        issues and new feature requests to sami.viitanen@gmail.com&lt;br/&gt;&lt;br/&gt;Thanks!
    </string>
    <string name="about_credits_str">&lt;big&gt;&lt;b&gt;&lt;u&gt;Credits&lt;/u&gt;&lt;/b&gt;&lt;/big&gt;&lt;br/&gt;&lt;br/&gt;&lt;b&gt;Programming
        and Graphics&lt;/b&gt;&lt;br/&gt;Sami Viitanen&lt;br/&gt;&lt;br/&gt;&lt;b&gt;Testing and
        Special Thanks&lt;/b&gt;&lt;br/&gt;---&lt;br/&gt;</string>
    <string name="about_tips_str">If you can choose, please use NTAG203 NFC tags for the best compatibility with all devices. Writable memory of NTAG203 tag is also large enough to contain needed Bluetooth pairing data.</string>
    <string name="about_copyright_str">Copyright Sami Viitanen 2011&#8211;2014, All rights reserved.</string>
    <string name="start_guide_str">This application allows you to write Bluetooth connectivity
        information to NFC tags. These tags can be then used for easy connecting between your
        Bluetooth devices and Android phone. Connecting and disconnecting happens simply by touching
        the NFC tag with your device.
    </string>
    <string name="end_success_str">Tag written successfully!</string>
    <string name="end_write_another_str">Write another tag</string>
    <string name="bt_device_name_str">Unknown device</string>
    <string name="bt_device_address_str">00:00:00:00:00:00</string>
    <string name="end_exit_str">Exit</string>
    <string name="action_dialog_nfc_not_enabled_str">NFC does not seem to be enabled. You have to
        enable it manually. Tap OK to start settings. Return to this application with back after you
        are done.
    </string>
    <string name="action_dialog_ok">OK</string>
    <string name="action_dialog_bluetooth_failed_str">Failed to enable Bluetooth.</string>
    <string name="tap_guide_str">Please move your define close to writable NFC tag. When tag is
        found, Bluetooth connectivity information will be written to it.
    </string>
    <string name="extraopts_caption_str">Write options</string>
    <string name="extraopts_ready_str">Write to tag</string>
    <string name="extraopts_selected_device_caption_str">Selected device</string>
    <string name="extraopts_selected_le_device_caption_str">Selected LE device</string>
    <string name="extraopts_selected_device_default_str">-</string>
    <string name="extraopts_pin_caption_str">Pin code:</string>
    <string name="extraopts_make_readonly_str">Enable write protection of the tag</string>
    <string name="toast_bluetooth_enabled_str">Bluetooth enabled to locate Bluetooth devices.
    </string>
    <string name="tag_no_nfc_support_str">Your device does not support NFC</string>
    <string name="extraopts_make_readonly_info_str">Be careful! Read only can NOT be reverted.
    </string>
    <string name="btscan_started_str">Please enable the pair mode of your Bluetooth device, if your
        device is not listed here.
    </string>
    <string name="btscan_no_devices_found_str">No Bluetooth devices found. Please check that
        your Bluetooth device is turned on and in pairing mode. Then restart the device
        discovery.
    </string>
    <string name="tag_write_failed_str">Writing to tag failed.\n\nPlease check that tag is not write
        protected, and there is enough space for data.
    </string>
    <string name="tag_is_too_small_str">Tag does not have enough space for data required.
    </string>
    <string name="tag_unsupported_str">Given tag is unsupported. Try another.</string>
    <string name="btscan_paired_str">(paired)</string>
    <string name="about_links_str">&lt;big&gt;&lt;b&gt;&lt;u&gt;Links&lt;/u&gt;&lt;/b&gt;&lt;/big&gt;&lt;br/&gt;&lt;br/&gt;*
        video: http://www.youtube.com/watch?v=IbuLGsXIvKI&lt;br/&gt;* source code and issue reporting:
        https://github.com/alump/BtTagWriter&lt;br/&gt;</string>
    <string name="filter_bt_devices_str">Filter devices</string>
    <string name="extraopts_compatibility_mode">Compatibility mode</string>
    <string name="extraopts_compatibility_mode_info_str">Adds Handover Select record to tag for
        better compatibility. Only disable if your tags are too small for all this data.
    </string>
    <string name="btle_mode">Scan LE devices</string>
</resources>