<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/aboutItem"
        android:title="@string/about_button_str"
        android:menuCategory="container"
        android:enabled="true"
        android:showAsAction="never" />
    <item
        android:id="@+id/filterSearchitem"
        android:title="@string/filter_bt_devices_str"
        android:checkable="true"
        android:visible="false"
        android:enabled="true"
        android:menuCategory="container"
        android:showAsAction="never" />
    <item
        android:id="@+id/btleMode"
        android:title="@string/btle_mode"
        android:menuCategory="container"
        android:enabled="true"
        android:checkable="true"
        android:visible="false"
        android:showAsAction="never" />
</menu>