<?xml version="1.0" encoding="utf-8"?>

<ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainFlipper"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:id="@+id/startLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_bgcolor"
        android:orientation="vertical"
        android:paddingTop="0dp">

        <ImageView
            android:id="@+id/startImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/start"
            android:contentDescription="Application promo image"/>

        <TextView
            android:id="@+id/startTextView"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/start_guide_str" />

        <Button
            android:id="@+id/startButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6pt"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/start_button_str" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/aboutScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/appDescriptionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6pt"
                android:autoLink="all"
                android:text="" />

            <TextView
                android:id="@+id/limitationsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6pt"
                android:singleLine="false"
                android:text="" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="3pt"
                android:paddingTop="3pt"
                android:scaleType="fitXY"
                android:src="@android:drawable/divider_horizontal_bright"
                android:contentDescription="divider"/>

            <TextView
                android:id="@+id/creditsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6pt"
                android:singleLine="false"
                android:text="" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="3pt"
                android:paddingTop="3pt"
                android:scaleType="fitXY"
                android:src="@android:drawable/divider_horizontal_bright"
                android:contentDescription="divider"/>

            <TextView
                android:id="@+id/linksTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6pt"
                android:autoLink="all"
                android:text="@string/about_links_str" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="3pt"
                android:paddingTop="3pt"
                android:scaleType="fitXY"
                android:src="@android:drawable/divider_horizontal_bright"
                android:contentDescription="divider"/>

            <TextView
                android:id="@+id/copyrightTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6pt"
                android:autoLink="all"
                android:text="@string/about_copyright_str" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/btScanLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/btScanTopLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/titlebar_gradient"
            android:paddingLeft="6pt"
            android:paddingRight="6pt">

            <TextView
                android:id="@+id/btScanCaption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3pt"
                android:layout_marginBottom="3pt"
                android:layout_weight="1"
                android:shadowColor="@color/bt_devices_caption_shadowcolor"
                android:shadowDx="2"
                android:shadowDy="2"
                android:text="@string/bt_devices_caption_str"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/bt_devices_caption_fgcolor" />

            <ViewFlipper
                android:id="@+id/btScanActionsFlipper"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_weight="0"
                android:inAnimation="@anim/fade_in_anim"
                android:outAnimation="@anim/fade_out_anim">

                <ProgressBar
                    android:id="@+id/btScanProgressBar"
                    style="?android:attr/progressBarStyleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:indeterminate="false" />

                <ImageButton
                    android:id="@+id/btRescanButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:src="@drawable/ic_menu_refresh"
                    android:contentDescription="scan indicator"/>

            </ViewFlipper>

        </LinearLayout>

        <ListView
            android:id="@+id/btDevicesList"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3pt" />

        <TextView
            android:id="@+id/btScanNoDevicesFoundText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3pt"
            android:text="@string/btscan_no_devices_found_str"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/extraOptionsLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/extraOptionsTopHlinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/titlebar_gradient"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/extraOptionsCaption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3pt"
                android:layout_marginBottom="3pt"
                android:layout_weight="2"
                android:paddingLeft="6pt"
                android:shadowColor="@color/bt_devices_caption_shadowcolor"
                android:shadowDx="2"
                android:shadowDy="2"
                android:text="@string/extraopts_caption_str"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/bt_devices_caption_fgcolor" />

        </LinearLayout>

        <ScrollView
            android:id="@+id/extraoptsScrollView"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="2">

            <LinearLayout
                android:id="@+id/extraOptionsScrollLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

                <TextView
                    android:id="@+id/extraoptsSelectedDeviceCaption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/extraopts_selected_device_caption_str"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/extraoptsSelectedDeviceValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/extraopts_selected_device_default_str"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:scaleType="fitXY"
                    android:src="@android:drawable/divider_horizontal_bright"
                    android:contentDescription="divider"/>

                <TextView
                    android:id="@+id/extraoptsPinCaption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/extraopts_pin_caption_str"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/extraoptsPinEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:visibility="gone">

                </EditText>

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:scaleType="fitXY"
                    android:src="@android:drawable/divider_horizontal_bright"
                    android:visibility="gone"
                    android:contentDescription="divider"/>

                <CheckBox
                    android:id="@+id/extraoptsCompatibilityCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/extraopts_compatibility_mode"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/extraoptsCompatibilityCaption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/extraopts_compatibility_mode_info_str"
                    android:visibility="visible" />

                <CheckBox
                    android:id="@+id/readOnlycheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/extraopts_make_readonly_str" />

                <TextView
                    android:id="@+id/extraoptsNoticeCaption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/extraopts_make_readonly_info_str" />

            </LinearLayout>

        </ScrollView>

        <Button
            android:id="@+id/extraoptsReadyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6pt"
            android:layout_marginLeft="6pt"
            android:layout_marginRight="6pt"
            android:layout_marginTop="6pt"
            android:text="@string/extraopts_ready_str" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/tagLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/tapImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24pt"
            android:layout_marginRight="24pt"
            android:layout_weight="2"
            android:src="@drawable/tap"
            android:contentDescription="Tap NFC tag with your phone"/>

        <TextView
            android:id="@+id/tapTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6pt"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/tap_guide_str"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/successLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="12pt"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="12pt"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24pt"
            android:layout_marginRight="24pt"
            android:layout_weight="1"
            android:gravity="center"
            android:src="@drawable/success"
            android:contentDescription="success indicator"/>

        <TextView
            android:id="@+id/successTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_weight="0"
            android:gravity="center"
            android:text="@string/end_success_str"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/restartButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_weight="0"
            android:text="@string/end_write_another_str" />

        <Button
            android:id="@+id/exitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_weight="0"
            android:text="@string/end_exit_str" />

    </LinearLayout>

</ViewFlipper>